# final_python_core

./: README.md  pyproject.toml
cli_bot/: __init__.py  __main__.py  main.py
cli_bot/commands/: __init__.py  address_book.py  all_table.py  birthdays_in.py  contacts.py  decorator.py  help_text.py  note_book.py  notes.py  parser.py  storage.py
cli_bot/data/: addressbook.pkl  notes.pkl
