[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-bot-assistant"
dynamic = ["version"]
description = "Командний асистент для керування контактами, днями народження та нотатками."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Iraida Chirkova" },
    { name = "Kateryna Sheremet" },
    { name = "Maksym Chubenko" },
    { name = "Sasha Sikratov" },
    { name = "Yevhen Petorv" },
    { name = "Yevhenii Bohusevych" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]
dependencies = []

[project.scripts]
cli-bot = "cli_bot.main:main"

[tool.setuptools.dynamic]
version = { attr = "cli_bot.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_bot*"]
